--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-us'
-title = 'first_site'
+title = 'Blogs by Devesh'
 theme="hugo-PaperMod-master"
 
 [params]
