--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "themes/hugo-PaperMod-master"]
+[submodules="themes/hugo-PaperMod-master"]
 path=themes/hugo-PaperMod-master
-url=https://github.com/adityatelange/hugo-PaperMod.git
-branch=main
+url="https://github.com/Devesh-Gautam/blog_site_using_hugo"
