--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-PaperMod-master"]
-path=themes/hugo-PaperMod-master
-url=https://github.com/Devesh-Gautam/first_site
+	path = themes/hugo-PaperMod-master
+	url = https://github.com/adityatelange/hugo-PaperMod
